# HumanoidRobot

./: CMakeLists.txt  README.md
settings/: RobotParameters.json
src/BruceRobotStatus/: BruceRobotStatus.cpp  BruceRobotStatus.h  CMakeLists.txt
src/BruceRobotStatus/test/: testBruceStatus.cpp
src/Dynamics/: BruceDynamics.cpp  BruceDynamics.h  CMakeLists.txt  DynamicsInterface.h
src/Dynamics/test/: testDynamics.cpp
src/Kinematics/: BruceRobotKinematics.cpp  BruceRobotKinematics.h  CMakeLists.txt  KinematicsInterface.h
src/Kinematics/test/: testKinematics.cpp
src/MathTools/: MathTools.h
src/MemoryManager/: CMakeLists.txt  MemoryManager.cpp  MemoryManager.h
src/MemoryManager/test/: testMM.cpp
src/RobotModel/: CMakeLists.txt  README.md  RobotModel.cpp  RobotModel.h
src/RobotModel/test/: testModel.cpp
src/Shared_Memory/: CMakeLists.txt  SharedMemory.cpp  SharedMemory.h
src/Shared_Memory/test/: shm_test.cpp  test_params.cpp
src/Simulation/: BruceRobotSimulator.cpp  BruceRobotSimulator.h  CMakeLists.txt  GazeboBridge.cpp  GazeboBridge.h  gazeboBridge.cpp  initJointsConf.txt
src/Simulation/test/: testConnect.cpp
